--- a/src/components/button/button.css
+++ b/src/components/button/button.css
@@ -4,9 +4,12 @@
     width: 300px;
     height: 60px;
     color: #fdfdfd;
-    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     padding: 0;
     margin-top: 20px;
+    border-radius: 10px;
 }
 
 @media screen and (min-width: 768px){
