--- a/src/components/feedbackCard/feedbackCard.css
+++ b/src/components/feedbackCard/feedbackCard.css
@@ -2,12 +2,15 @@
     width: 80%;
     height: auto;
     background-image: url('../../assets/images/backgroud.png');
+    background-repeat: no-repeat;
+    background-size: cover;
     padding: 20px;
     font-family: "Press Start 2P", system-ui;
     display: flex;
     flex-direction: column;
     align-items: center;
     border-radius: 10px;
+    margin: 20px 0;
 }
 
 .feedback_result    {
@@ -44,13 +47,17 @@
 }
 
 .feedback_explanation   {
-    font-family: "Press Start 2P", system-ui;
     font-size: 20px;
     text-align: center;
     margin-bottom: 20px;
 }
 
+.feedback_explnation_title  {
+    font-family: "Press Start 2P", system-ui;
+}
+
 .feedback_explanatin_text   {
+    font-family: "Roboto", sans-serif;
     font-size: 12px;
     text-align: justify;
     margin: 20px, 0px;
@@ -64,10 +71,15 @@
     .feedback_card  {
         width: 35%;
         height: 80%;
+        margin: 0;
     }
 
     .feedback_explanation   {
         overflow-y: auto;
         overflow-x: hidden;
+    }
+
+    .feedback_explanatin_text   {
+        font-size: 15px;
     }
 }
