--- a/src/components/questionCard/questionCard.css
+++ b/src/components/questionCard/questionCard.css
@@ -2,12 +2,15 @@
     width: 80%;
     height: auto;
     background-image: url('../../assets/images/backgroud.png');
+    background-repeat: no-repeat;
+    background-size: cover;
     padding: 20px;
     font-family: "Press Start 2P", system-ui;
     display: flex;
     flex-direction: column;
     align-items: center;
     border-radius: 10px;
+    margin: 20px 0;
 }
 
 .question_question  {
@@ -57,6 +60,7 @@
     .question_card      {
         width: 35%;
         height: 80%;
+        margin: 0;
     }
     
     .question_list_answr_button {
