--- a/src/components/articleCard/articleCard.css
+++ b/src/components/articleCard/articleCard.css
@@ -9,6 +9,7 @@
     font-family: "Press Start 2P", system-ui;
     background-color: #00175D;
     border-radius: 10px;
+    margin: 20px;
 }
 
 .article_card_img   {
