--- a/src/components/standardCard/standardCard.css
+++ b/src/components/standardCard/standardCard.css
@@ -2,12 +2,16 @@
     width: 80%;
     height: auto;
     background-image: url('../../assets/images/backgroud.png');
+    background-repeat: no-repeat;
+    background-size: cover;
     padding: 20px;
     font-family: "Press Start 2P", system-ui;
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: space-around;
     border-radius: 10px;
+    margin: 40px 0;
 }
 
 @media screen and (min-width: 768px) {
