--- a/src/screens/gameScreen/gameScreen.css
+++ b/src/screens/gameScreen/gameScreen.css
@@ -4,6 +4,7 @@
     align-items: center;
     padding: 40px 0;
     background: linear-gradient(45deg, #38B6FF, #0275C2);
+    min-height: 100vh;
 }
 
 @media screen and (min-width: 768px) {
