--- a/src/screens/loginScreen/loginScreen.css
+++ b/src/screens/loginScreen/loginScreen.css
@@ -7,6 +7,7 @@
     background-image: url(../../assets/images/backgroud.png);
     background-repeat: no-repeat;
     background-size: cover;
+    color: black;
 }
 
 
