--- a/src/components/formField/fromField.css
+++ b/src/components/formField/fromField.css
@@ -8,6 +8,7 @@
     padding-left: 10px;
     padding-right: 10px;
     margin-top: 20px;
+    color: #222222;
 }
 
 @media screen and (min-width: 768px) {
