--- a/src/components/rankingCard/rankingCard.css
+++ b/src/components/rankingCard/rankingCard.css
@@ -1,7 +1,7 @@
 .ranking_Card   {
     display: flex;
-    flex-direction: row;
-    justify-content: space-between;
+    flex-direction: column;
+    justify-content: center;
     align-items: center;
     padding: 10px 20px;
     margin-top: 20px;
@@ -9,6 +9,13 @@
     border-radius: 10px;
     height: auto;
     width: 80%;
+}
+
+.ranking_data_align {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
 }
 
 .ranking_position   {
@@ -28,9 +35,34 @@
 }
 
 .ranking_name   {
-     font-family: "Press Start 2P", system-ui;
+    font-family: "Press Start 2P", system-ui;
     font-size: 15px;
     color: #fdfdfd;
-    text-align: end;
+    text-align: center;
     width: 70%;
+}
+
+.ranking_score  {
+    background-color: #fdfdfd;
+    color: #38B6FF;
+    font-family: "Press Start 2P", system-ui;
+    font-size: 12px;
+    border-radius: 5px;
+    width: 90px;
+    margin-left: 30px;
+    height: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+@media screen and (min-width: 768px)    {
+    .ranking_Card   {
+        flex-direction: row;
+        justify-content: space-between;
+    }
+
+    .ranking_name   {
+        text-align: end;
+    }
 }
