--- a/src/components/questionCard/questionCard.css
+++ b/src/components/questionCard/questionCard.css
@@ -9,6 +9,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: space-between;
     border-radius: 10px;
     margin: 20px 0;
 }
