--- a/src/components/loginHomeModel/loginHomeModel.css
+++ b/src/components/loginHomeModel/loginHomeModel.css
@@ -3,20 +3,18 @@
     flex-direction: column;
     width: 90%;
     align-items: center;
-    justify-content: space-between;
+    justify-content: space-around;
+    min-height: 100vh;
 }
 
 .content_container  {
-    margin-top: 40px;
     display: flex;
     flex-direction: column;
     width: 100%;
-    height: 70%;
     align-items: center;
 }
 
 .img_logo   {
-    height: 30%;
     max-width: 100%;
 }
 
@@ -32,6 +30,7 @@
     .img_logo   {
         height: auto;
         max-width: 40%;
+        margin-left: 8%;
     }
 
     .content_container  {
